# litestar-scrapy

./: app.py  pyproject.toml  readme.md  requirements.txt
vscode/: launch.json
